--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.8",
     "react": "^16.3.1",
+    "react-bootstrap-dropdown-menu": "^1.1.14",
     "react-dom": "^16.0.0",
+    "react-dropdown": "^1.5.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
