--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
-    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
+    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register",
+    "proxy": "http://localhost:8080"
+
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -37,10 +39,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
     "css-loader": "^1.0.0",
-    "express": "^4.14.1",
+    "express": "^4.16.3",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
@@ -59,6 +62,7 @@
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.3.1",
     "socket.io": "^2.0.3",
+    "stripe": "^6.5.0",
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
